name:                hakyll-diagrams
version:             0.1.0.0
synopsis:            Include images in blog posts with inline diagrams code
description:         A plugin for @Hakyll@ which turns inline diagrams code into images.
license:             BSD3
license-file:        LICENSE
extra-source-files:  CHANGES
author:              Corentin Dupont
maintainer:          corentin.dupont@gmail.com
copyright:           Copyright 2015 Corentin Dupont
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/cdupont/hakyll-diagrams.git

library
  default-language:    Haskell2010
  exposed-modules:     Hakyll.Web.Diagrams
  build-depends:       base >= 4.3 && < 4.9,
                       containers,
                       filepath,
                       directory,
                       hakyll              >= 4.7 && < 4.8,
                       diagrams-lib        >= 1.3 && < 1.4,
                       diagrams-rasterific >= 1.3 && < 1.4,
                       JuicyPixels         >= 3.2 && < 3.3,
                       diagrams-builder    >= 0.4 && < 0.8,
                       pandoc              >= 1.15 && < 1.16,
                       safe ==0.3.*,
                       parsec >= 3 && < 3.2
  hs-source-dirs:      src
