name: hakyll-diagrams
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright 2015 Corentin Dupont
maintainer: corentin.dupont@gmail.com
synopsis: Include images in blog posts with inline diagrams code
description:
    A plugin for @Hakyll@ which turns inline diagrams code into images.
category: Web
author: Corentin Dupont
extra-source-files:
    CHANGES

source-repository head
    type: git
    location: git://github.com/cdupont/hakyll-diagrams.git

library
    build-depends:
        base >=4.3 && <4.9,
        containers -any,
        filepath -any,
        directory -any,
        hakyll >=4.6 && <4.8,
        diagrams-lib >=1.2 && <1.4,
        diagrams-rasterific >=0.1 && <1.4,
        JuicyPixels >=3.2 && <3.3,
        diagrams-builder >=0.4 && <0.8,
        pandoc >=1.13 && <1.16,
        safe ==0.3.*,
        parsec >=3 && <3.2,
        diagrams-pandoc -any
    exposed-modules:
        Hakyll.Web.Diagrams
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
